# semcom_ws

./: .gitignore  .gitmodules  decoder_base.onnx
src/commun/: exporting.ipynb  package.xml  setup.cfg  setup.py
src/commun/commun/: code_publisher.py  code_subscriber.py  image_code_all.py  image_code_publisher.py  image_code_subscriber.py  imagenet_vitvq_encoder_base.yaml  imagenet_vitvq_encoder_small.yaml  imagenet_vitvq_small.yaml  latency.py
src/commun/enhancing/: __init__.py
src/commun/enhancing/modules/stage1/: layers.py  vitvqgan.py
src/commun/enhancing/utils/: callback.py
src/commun/taming/models/: vqgan.py
src/cpp_commun/: CMakeLists.txt  package.xml
src/cpp_commun/models/: encoder.trt
src/cpp_commun/src/: publisher_member_function.cpp  sem_publisher.cpp  sem_subscriber.cpp  subscriber_member_function.cpp
src/semcom_msgs/: CMakeLists.txt  package.xml
src/semcom_msgs/msg/: Code.msg
